gcc/testsuite/rust/rustc/ui/malformed/do-not-ice-on-note_and_explain_dg.rs
struct A<B>(B);

impl<B> A<B> {
    fn d() {
        fn d() {
            Self(1)
// { dg-error ".E0401." "" { target *-*-* } .-1 }
        }
    }
}

fn main() {}

